syntax = "proto3";
package message_center.user_service.api;
option go_package = "user_service/api";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service UserService {
    rpc RegistUser(User) returns (RegistUserResponse) {
        option (google.api.http) = {
            post: "/user"
        };
    };
}

message User {
    // User's first name
    string first_name = 1;
    // User's last name
    string last_name = 2;
    // User's email
    string email = 3;
    // User's phone number
    string phone = 4;
    // Last update
    google.protobuf.Timestamp last_update = 5;
}

message RegistUserResponse {
    // code
    int32 code = 1;
    // message
    string message = 2;
}